--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>GitHub Task Project</h1>
     <p>Learning Git Workflow</p>    
+    <h2>Feature UI branch update</h2>
 </body>
 </html>
